crates/aquascope/tests/snapshots/interpreter__nested-ref.test.snap
---
source: crates/aquascope/tests/interpreter.rs
description: nested-ref.test
---
steps:
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 3
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 1
              column: 2
            end:
              line: 1
              column: 27
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: x
              value:
                type: Array
                value:
                  type: All
                  value:
                    - type: Tuple
                      value:
                        - type: Int
                          value: 0
                        - type: Int
                          value: 1
                    - type: Tuple
                      value:
                        - type: Int
                          value: 2
                        - type: Int
                          value: 3
              moved_paths: []
    heap:
      locations: []
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 3
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 2
              column: 2
            end:
              line: 2
              column: 18
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: x
              value:
                type: Array
                value:
                  type: All
                  value:
                    - type: Tuple
                      value:
                        - type: Int
                          value: 0
                        - type: Int
                          value: 1
                    - type: Tuple
                      value:
                        - type: Int
                          value: 2
                        - type: Int
                          value: 3
              moved_paths: []
            - name: y
              value:
                type: Pointer
                value:
                  path:
                    segment:
                      type: Stack
                      value:
                        frame: 0
                        local: x
                    parts:
                      - type: Index
                        value: 1
                      - type: Field
                        value: 1
                  range: ~
              moved_paths: []
    heap:
      locations: []
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 3
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 3
              column: 0
            end:
              line: 3
              column: 1
            filename:
              private_use_as_methods_instead: 0
          locals: []
    heap:
      locations: []
result:
  type: Success
